applications/transmission/transmission-openvpn-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: transmission-openvpn
  name: transmission-openvpn
spec:
  ports:
    - name: "9091"
      port: 9091
      targetPort: 9091
  selector:
    io.kompose.service: transmission-openvpn
status:
  loadBalancer: {}
